# Matrix

./: .gitignore  CMakeLists.txt  Makefile
cmake/: CompileOptions.cmake
include/: matrix.h
src/: Makefile  S21Matrix.cc  S21Matrix.cpp  S21Matrix.h  a.out  main.cc
src/Lib/: S21Matrix.cc  S21Matrix.h
src/Tests/: S21MatrixTests.cc
src/lib/: matrix.h
src/tests/: S21MatrixTests.cc
tests/: constructor_tests.cc  tests.cc
